--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.379.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
